changing file names

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* Stylesheet for Red Cross Mobile Disaster Assessment Application */
+/* Please use these styles for all mobile interfaces. */
+
+/* ############## General text styling ############### */
 body
 {
 	padding:0px;
@@ -6,6 +10,7 @@ body
 	font-size:13pt;
 }
 
+/* h1 tag is used as the header for each section or page */
 h1
 {
 	font-size:18pt;
@@ -20,6 +25,7 @@ h1
 	margin-bottom:5px;
 }
 
+/* Should appear at the top of a page, above the header, to indicate success of an action */
 div.success_message
 {
 	font-size:12pt;
@@ -35,6 +41,7 @@ div.success_message
 	text-align:center;
 }
 
+/* Surrounds a set of form fields */
 div.sub_form
 {
 	border:1px solid #cccccc;
@@ -43,26 +50,29 @@ div.sub_form
 	margin-bottom:10px;
 	-webkit-border-radius: 0.5em;
 	-webkit-box-shadow: 1px 1px 1px #ddd;
-   
+
 }
 
+/* ############## Form field styling ############### */
+
+/* Apply base styles for all form fields */
 input, textarea, select
 {
 	margin-bottom:10px;
-	
 }
 
 input, textarea 
 {
-   border: 1px solid #555;
-   padding: 0.5em;
-   font-size: 13pt;
-   line-height: 1.2em;
-   width: 80%;
-   background: #fff;
-   background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
-   -webkit-box-shadow: 1px 1px 1px #fff;
-   -webkit-border-radius: 0.2em;
+	border: 1px solid #555;
+	padding: 0.5em;
+	font-size: 13pt;
+	line-height: 1.2em;
+	width: 80%;
+	background: #fff;
+	-webkit-appearance: none;
+	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
+	-webkit-box-shadow: 1px 1px 1px #fff;
+	-webkit-border-radius: 0.2em;
 }
 
 select
@@ -75,30 +85,58 @@ select
 }
 
 input[type=checkbox],
- input[type=radio] {
-   display: inline-block;
-   font-size: 15px;
-   line-height: 1em;
-   margin: 0 0.25em 0 0;
-   padding: 0;
-   width: 2.5em;
-   height: 2.5em;
-   -webkit-border-radius: 0.25em;
-   vertical-align: text-top;
- }
-
- input[type=radio] {
-    -webkit-border-radius: 2em; /* Make radios round */
-  }
-
- input[type=submit] {
-	background: #058cf5;
-	width:7em;
-  }
-
-input:focus, textarea:focus, select:focus {
-	   outline: none;
-	   border: 2px solid #058cf5;
-	   margin: -1px;
+input[type=radio] {
+	display: inline-block;
+	font-size: 15px;
+	line-height: 1em;
+	margin: 0 0.25em 0 0;
+	padding: 0;
+	width: 2.5em;
+	height: 2.5em;
+	-webkit-border-radius: 0.25em;
+	vertical-align: text-top;
 }
 
+input[type=radio] {
+	-webkit-border-radius: 2em; /* Make radios round */
+}
+
+input[type=radio]:checked {
+	background: #058cf5;
+    -webkit-background-size: 28px 28px;
+}
+
+input[type=submit] {
+	background: #058cf5;
+	width:7em;
+}
+
+input:focus, textarea:focus, select:focus {
+	outline: none;
+	border: 2px solid #058cf5;
+}
+
+textarea {
+	height: 55px;
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #aaa), color-stop(0.05, #fff));
+}
+
+/* Define a table style for form labels and responses */
+table.form_table
+{
+	border:0px;
+}
+
+td.form_table_label
+{
+	font-size:13pt;
+	text-align:right;
+}
+
+td.form_table_input
+{
+	font-size:13pt;
+	text-align:left;
+	padding-left:10px;
+	width:45%;
+}
