--- a/web/v2/style.css
+++ b/web/v2/style.css
@@ -130,8 +130,8 @@ div.sub_form
 {
 	border:1px solid #cccccc;
 	padding:8px;
-	margin:4px;
 	margin-bottom:10px;
+	margin-top:10px;
 	-webkit-border-radius: 0.5em;
 	-webkit-box-shadow: 1px 1px 1px #ddd;
 
