--- a/web/v2/style.css
+++ b/web/v2/style.css
@@ -94,7 +94,6 @@ div.failure_message
 div.instruction_text
 {
 	font-weight:bold;
-	font-style:italic;
 	margin-bottom:10px;
 }
 
@@ -128,10 +127,12 @@ div.bottom_button_row
 
 div.sub_form
 {
-	border:1px solid #cccccc;
-	padding:8px;
-	margin-bottom:10px;
-	margin-top:10px;
+	border:1px solid #aaabbb;
+	padding:6px;
+	margin-bottom:9px;
+	margin-top:9px;
+	margin-left:-8px;
+	margin-right:-8px;
 	-webkit-border-radius: 0.5em;
 	-webkit-box-shadow: 1px 1px 1px #ddd;
 
@@ -175,12 +176,18 @@ a.remove_formatting
 	color:black;
 }
 
+/* Fix a weird iOS styling on one of the jquery divs */
+
+div.iOS-fc-fix
+{
+	margin:0px;padding:0px;border:0px;width:170px;!important
+}
 /* ############## Form field styling ############### */
 
 /* Apply base styles for all form fields */
 input, textarea, select
 {
-	margin-bottom:10px;
+	/* margin-bottom:3px;*/
 }
 
 input, textarea 
@@ -194,7 +201,7 @@ input, textarea
 	-webkit-appearance: none;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
 	-webkit-box-shadow: 1px 1px 1px #fff;
-	-webkit-border-radius: 0.2em;
+	-webkit-border-radius: 0.1em;
 }
 
 select
@@ -255,19 +262,19 @@ table.form_table
 
 td.form_table_label
 {
-	font-size:13pt;
 	text-align:right;
 	border-top:1px solid #cccccc;
 	padding-top:4px;
 	padding-bottom:4px;
+	font-size:12pt;
 }
 
 td.form_table_input
 {
-	font-size:13pt;
+	font-size:12pt;
 	text-align:left;
 	padding-left:10px;
-	width:45%;
+	width:170px;
 	border-top:1px solid #cccccc;
 	padding-top:4px;
 	padding-bottom:4px;
